--- a/translations/texts/items/active/weapons/npc/npcdeadbeatassaultrifle.activeitem.json
+++ b/translations/texts/items/active/weapons/npc/npcdeadbeatassaultrifle.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "NPC Deadbeat Assault Rifle"
+      "Eng": "NPC Deadbeat Assault Rifle",
+      "Por": "Rifle de Assalto Inoperante de NPC"
     }
   }
 ]
