--- a/translations/texts/items/active/weapons/npc/npcdeadbeataxe.activeitem.json
+++ b/translations/texts/items/active/weapons/npc/npcdeadbeataxe.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "NPC Deadbeat Axe"
+      "Eng": "NPC Deadbeat Axe",
+      "Por": "Machado de Caloteiro de NPC"
     }
   }
 ]
