--- a/translations/texts/items/active/weapons/npc/npceyesword.activeitem.json
+++ b/translations/texts/items/active/weapons/npc/npceyesword.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "NPC Oculus Reaver"
+      "Eng": "NPC Oculus Reaver",
+      "Por": "Oculus Reaver de NPC"
     }
   }
 ]
