--- a/translations/texts/items/active/weapons/npc/npcfirebow.activeitem.json
+++ b/translations/texts/items/active/weapons/npc/npcfirebow.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "NPC Fire Bow"
+      "Eng": "NPC Fire Bow",
+      "Por": "Arco de Fogo de NPC"
     }
   }
 ]
