--- a/translations/texts/items/active/weapons/npc/npcfloranassaultrifle.activeitem.json
+++ b/translations/texts/items/active/weapons/npc/npcfloranassaultrifle.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "NPC Floran Assault Rifle"
+      "Eng": "NPC Floran Assault Rifle",
+      "Por": "Rifle de Assalto Floran de NPC"
     }
   }
 ]
