--- a/translations/texts/items/active/weapons/npc/npchammer.activeitem.json
+++ b/translations/texts/items/active/weapons/npc/npchammer.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "NPC Hammer"
+      "Eng": "NPC Hammer",
+      "Por": "Martelo de NPC"
     }
   }
 ]
