--- a/translations/texts/items/active/weapons/npc/npcmachinepistol.activeitem.json
+++ b/translations/texts/items/active/weapons/npc/npcmachinepistol.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "NPC Machine Pistol"
+      "Eng": "NPC Machine Pistol",
+      "Por": "Pistola Automática de NPC"
     }
   }
 ]
