--- a/translations/texts/items/active/weapons/npc/npcpistol.activeitem.json
+++ b/translations/texts/items/active/weapons/npc/npcpistol.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "NPC Pistol"
+      "Eng": "NPC Pistol",
+      "Por": "Pistola de NPC"
     }
   }
 ]
