--- a/translations/texts/items/active/weapons/npc/npcrocketlauncher.activeitem.json
+++ b/translations/texts/items/active/weapons/npc/npcrocketlauncher.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "NPC Rocket Launcher"
+      "Eng": "NPC Rocket Launcher",
+      "Por": "Lança-foguetes de NPC"
     }
   }
 ]
