--- a/translations/texts/items/active/weapons/npc/npcshotgun.activeitem.json
+++ b/translations/texts/items/active/weapons/npc/npcshotgun.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "NPC Shotgun"
+      "Eng": "NPC Shotgun",
+      "Por": "Espingarda de NPC"
     }
   }
 ]
