--- a/translations/texts/items/active/weapons/npc/npctungstenbow.activeitem.json
+++ b/translations/texts/items/active/weapons/npc/npctungstenbow.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "NPC Tungsten Bow"
+      "Eng": "NPC Tungsten Bow",
+      "Por": "Arco de Tungstênio de NPC"
     }
   }
 ]
