--- a/translations/texts/items/active/weapons/npc/npcwrench.activeitem.json
+++ b/translations/texts/items/active/weapons/npc/npcwrench.activeitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "NPC Wrench"
+      "Eng": "NPC Wrench",
+      "Por": "Chave Inglesa de NPC"
     }
   }
 ]
