--- a/translations/texts/items/augments/back/energyaugment1.augment.json
+++ b/translations/texts/items/augments/back/energyaugment1.augment.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Energy I Augment"
+      "Eng": "Energy I Augment",
+      "Por": "Aprimoramento de Energia I"
     }
   }
 ]
