--- a/translations/texts/items/augments/back/energyaugment2.augment.json
+++ b/translations/texts/items/augments/back/energyaugment2.augment.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Energy II Augment"
+      "Eng": "Energy II Augment",
+      "Por": "Aprimoramento de Energia II"
     }
   }
 ]
