--- a/translations/texts/items/augments/back/energyaugment3.augment.json
+++ b/translations/texts/items/augments/back/energyaugment3.augment.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Energy III Augment"
+      "Eng": "Energy III Augment",
+      "Por": "Aprimoramento de Energia III"
     }
   }
 ]
