--- a/translations/texts/items/augments/back/fireblockaugment.augment.json
+++ b/translations/texts/items/augments/back/fireblockaugment.augment.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Fire Resist Augment"
+      "Eng": "Fire Resist Augment",
+      "Por": "Aprimoramento de Resistência a Fogo"
     }
   }
 ]
