--- a/translations/texts/items/augments/back/gravityaugment.augment.json
+++ b/translations/texts/items/augments/back/gravityaugment.augment.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Gravity Augment"
+      "Eng": "Gravity Augment",
+      "Por": "Aprimoramento de Gravidade"
     }
   }
 ]
