--- a/translations/texts/items/augments/back/healingaugment1.augment.json
+++ b/translations/texts/items/augments/back/healingaugment1.augment.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Healing I Augment"
+      "Eng": "Healing I Augment",
+      "Por": "Aprimoramento de Cura I"
     }
   }
 ]
