--- a/translations/texts/items/augments/back/healingaugment2.augment.json
+++ b/translations/texts/items/augments/back/healingaugment2.augment.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Healing II Augment"
+      "Eng": "Healing II Augment",
+      "Por": "Aprimoramento de Cura II"
     }
   }
 ]
