--- a/translations/texts/items/augments/back/healthaugment1.augment.json
+++ b/translations/texts/items/augments/back/healthaugment1.augment.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Health I Augment"
+      "Eng": "Health I Augment",
+      "Por": "Aprimoramento de Vida I"
     }
   }
 ]
