--- a/translations/texts/items/augments/back/healthaugment2.augment.json
+++ b/translations/texts/items/augments/back/healthaugment2.augment.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Health II Augment"
+      "Eng": "Health II Augment",
+      "Por": "Aprimoramento de Vida II"
     }
   }
 ]
