--- a/translations/texts/items/augments/back/healthaugment3.augment.json
+++ b/translations/texts/items/augments/back/healthaugment3.augment.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Health III Augment"
+      "Eng": "Health III Augment",
+      "Por": "Aprimoramento de Vida III"
     }
   }
 ]
