--- a/translations/texts/items/augments/back/iceblockaugment.augment.json
+++ b/translations/texts/items/augments/back/iceblockaugment.augment.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ice Resist Augment"
+      "Eng": "Ice Resist Augment",
+      "Por": "Aprimoramento de Resistência a Gelo"
     }
   }
 ]
