--- a/translations/texts/items/augments/back/jumpaugment.augment.json
+++ b/translations/texts/items/augments/back/jumpaugment.augment.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Jump Augment"
+      "Eng": "Jump Augment",
+      "Por": "Aprimoramento de Pulo"
     }
   }
 ]
