--- a/translations/texts/items/augments/back/lightaugment3.augment.json
+++ b/translations/texts/items/augments/back/lightaugment3.augment.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Light III Augment"
+      "Eng": "Light III Augment",
+      "Por": "Aprimoramento de Luz III"
     }
   }
 ]
