--- a/translations/texts/items/augments/back/poisonblockaugment.augment.json
+++ b/translations/texts/items/augments/back/poisonblockaugment.augment.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Poison Resist Augment"
+      "Eng": "Poison Resist Augment",
+      "Por": "Aprimoramento de Resistência a Veneno"
     }
   }
 ]
