--- a/translations/texts/items/augments/back/speedaugment.augment.json
+++ b/translations/texts/items/augments/back/speedaugment.augment.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Speed Augment"
+      "Eng": "Speed Augment",
+      "Por": "Aprimoramento de Velocidade"
     }
   }
 ]
