--- a/translations/texts/items/augments/back/swimaugment.augment.json
+++ b/translations/texts/items/augments/back/swimaugment.augment.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Swimming Augment"
+      "Eng": "Swimming Augment",
+      "Por": "Aprimoramento de Natação"
     }
   }
 ]
