--- a/translations/texts/items/augments/fishing/fishinglurecontrol.augment.json
+++ b/translations/texts/items/augments/fishing/fishinglurecontrol.augment.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Motorized Lure"
+      "Eng": "Motorized Lure",
+      "Por": "Isca Motorizada"
     }
   }
 ]
