--- a/translations/texts/items/augments/fishing/fishingluresinking.augment.json
+++ b/translations/texts/items/augments/fishing/fishingluresinking.augment.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Sinking Lure"
+      "Eng": "Sinking Lure",
+      "Por": "Isca Pesada"
     }
   }
 ]
