--- a/translations/texts/items/throwables/snowballgigantic.thrownitem.json
+++ b/translations/texts/items/throwables/snowballgigantic.thrownitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Gigantic Snowball"
+      "Eng": "Gigantic Snowball",
+      "Por": "Bola de Neve Gigantesca"
     }
   }
 ]
