--- a/translations/texts/items/throwables/snowballmedium.thrownitem.json
+++ b/translations/texts/items/throwables/snowballmedium.thrownitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Medium Snowball"
+      "Eng": "Medium Snowball",
+      "Por": "Bola de Neve Média"
     }
   }
 ]
