--- a/translations/texts/items/throwables/snowballlarge.thrownitem.json
+++ b/translations/texts/items/throwables/snowballlarge.thrownitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Large Snowball"
+      "Eng": "Large Snowball",
+      "Por": "Bola de Neve Grande"
     }
   }
 ]
