--- a/translations/texts/items/throwables/snowflakeshuriken.thrownitem.json
+++ b/translations/texts/items/throwables/snowflakeshuriken.thrownitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Snowflake Shuriken"
+      "Eng": "Snowflake Shuriken",
+      "Por": "Shuriken de Floco de Neve"
     }
   }
 ]
