--- a/translations/texts/items/throwables/thorngrenade.thrownitem.json
+++ b/translations/texts/items/throwables/thorngrenade.thrownitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Thorn Grenade"
+      "Eng": "Thorn Grenade",
+      "Por": "Granada de Espinhos"
     }
   }
 ]
