--- a/translations/texts/items/throwables/throwingbones.thrownitem.json
+++ b/translations/texts/items/throwables/throwingbones.thrownitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Throwing Bones"
+      "Eng": "Throwing Bones",
+      "Por": "Ossos de Arremesso"
     }
   }
 ]
