--- a/translations/texts/items/throwables/throwingdagger.thrownitem.json
+++ b/translations/texts/items/throwables/throwingdagger.thrownitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Throwing Dagger"
+      "Eng": "Throwing Dagger",
+      "Por": "Adaga de Arremesso"
     }
   }
 ]
