--- a/translations/texts/items/throwables/throwingdart.thrownitem.json
+++ b/translations/texts/items/throwables/throwingdart.thrownitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Throwing Dart"
+      "Eng": "Throwing Dart",
+      "Por": "Dardo de Arremesso"
     }
   }
 ]
