--- a/translations/texts/items/throwables/throwinggnome.thrownitem.json
+++ b/translations/texts/items/throwables/throwinggnome.thrownitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ball of Gnomes"
+      "Eng": "Ball of Gnomes",
+      "Por": "Bola de Gnomos"
     }
   }
 ]
