--- a/translations/texts/items/throwables/throwingkunai.thrownitem.json
+++ b/translations/texts/items/throwables/throwingkunai.thrownitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Throwing Kunai"
+      "Eng": "Throwing Kunai",
+      "Por": "Kunai de Arremesso"
     }
   }
 ]
