--- a/translations/texts/items/throwables/throwingspear.thrownitem.json
+++ b/translations/texts/items/throwables/throwingspear.thrownitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Iron Hunting Spear"
+      "Eng": "Iron Hunting Spear",
+      "Por": "Lança de Caça de Ferro"
     }
   }
 ]
