--- a/translations/texts/items/throwables/throwingstar.thrownitem.json
+++ b/translations/texts/items/throwables/throwingstar.thrownitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Throwing Star"
+      "Eng": "Throwing Star",
+      "Por": "Estrela de Arremesso"
     }
   }
 ]
