--- a/translations/texts/items/throwables/waterballoon.thrownitem.json
+++ b/translations/texts/items/throwables/waterballoon.thrownitem.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Water Balloon"
+      "Eng": "Water Balloon",
+      "Por": "Balão de Água"
     }
   }
 ]
