--- a/translations/texts/items/generic/food/tier1/bakedpotato.consumable.json
+++ b/translations/texts/items/generic/food/tier1/bakedpotato.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Baked Potato"
+      "Eng": "Baked Potato",
+      "Por": "Batata Assada"
     }
   }
 ]
