--- a/translations/texts/items/generic/food/tier1/boiledpearlpeas.consumable.json
+++ b/translations/texts/items/generic/food/tier1/boiledpearlpeas.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Boiled Pearlpeas"
+      "Eng": "Boiled Pearlpeas",
+      "Por": "Ervilhas Cozidas"
     }
   }
 ]
