--- a/translations/texts/items/generic/food/tier1/boiledrice.consumable.json
+++ b/translations/texts/items/generic/food/tier1/boiledrice.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Boiled Rice"
+      "Eng": "Boiled Rice",
+      "Por": "Arroz Cozido"
     }
   }
 ]
