--- a/translations/texts/items/generic/food/tier1/cookedtomato.consumable.json
+++ b/translations/texts/items/generic/food/tier1/cookedtomato.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Cooked Tomato"
+      "Eng": "Cooked Tomato",
+      "Por": "Tomate Cozido"
     }
   }
 ]
