--- a/translations/texts/items/generic/food/tier1/fishfingers.consumable.json
+++ b/translations/texts/items/generic/food/tier1/fishfingers.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Fish Fingers"
+      "Eng": "Fish Fingers",
+      "Por": "Palitos de Peixe"
     }
   }
 ]
