--- a/translations/texts/items/generic/food/tier1/fishnchips.consumable.json
+++ b/translations/texts/items/generic/food/tier1/fishnchips.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Fish and Chips"
+      "Eng": "Fish and Chips",
+      "Por": "Peixe e Fritas"
     }
   }
 ]
