--- a/translations/texts/items/generic/food/tier1/fishstew.consumable.json
+++ b/translations/texts/items/generic/food/tier1/fishstew.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Fish Stew"
+      "Eng": "Fish Stew",
+      "Por": "Ensopado de Peixe"
     }
   }
 ]
