--- a/translations/texts/items/generic/food/tier1/mashedpotato.consumable.json
+++ b/translations/texts/items/generic/food/tier1/mashedpotato.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Mashed Potato"
+      "Eng": "Mashed Potato",
+      "Por": "Purê de Batata"
     }
   }
 ]
