--- a/translations/texts/items/generic/food/tier1/meatdumplings.consumable.json
+++ b/translations/texts/items/generic/food/tier1/meatdumplings.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Meat Dumplings"
+      "Eng": "Meat Dumplings",
+      "Por": "Bolinhos de Carne"
     }
   }
 ]
