--- a/translations/texts/items/generic/food/tier1/meatstew.consumable.json
+++ b/translations/texts/items/generic/food/tier1/meatstew.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Meat Stew"
+      "Eng": "Meat Stew",
+      "Por": "Ensopado de Carne"
     }
   }
 ]
