--- a/translations/texts/items/generic/food/tier1/pearlpeabroth.consumable.json
+++ b/translations/texts/items/generic/food/tier1/pearlpeabroth.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Pearlpea Broth"
+      "Eng": "Pearlpea Broth",
+      "Por": "Caldo de Ervilha"
     }
   }
 ]
