--- a/translations/texts/items/generic/food/tier1/roastedcarrot.consumable.json
+++ b/translations/texts/items/generic/food/tier1/roastedcarrot.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Roasted Carrot"
+      "Eng": "Roasted Carrot",
+      "Por": "Cenoura Assada"
     }
   }
 ]
