--- a/translations/texts/items/generic/food/tier1/roastedmushrooms.consumable.json
+++ b/translations/texts/items/generic/food/tier1/roastedmushrooms.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Roasted Mushrooms"
+      "Eng": "Roasted Mushrooms",
+      "Por": "Cogumelos Assados"
     }
   }
 ]
