--- a/translations/texts/items/generic/food/tier2/beakseedjam.consumable.json
+++ b/translations/texts/items/generic/food/tier2/beakseedjam.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Beakseed Jam"
+      "Eng": "Beakseed Jam",
+      "Por": "Geléia de Semente de Bico"
     }
   }
 ]
