--- a/translations/texts/items/generic/food/tier2/bonbonbonbons.consumable.json
+++ b/translations/texts/items/generic/food/tier2/bonbonbonbons.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Bon Bon Bon Bons"
+      "Eng": "Bon Bon Bon Bons",
+      "Por": "Bombom Bombom"
     }
   }
 ]
