--- a/translations/texts/items/generic/food/tier2/cactusjuice.consumable.json
+++ b/translations/texts/items/generic/food/tier2/cactusjuice.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Cactus Juice"
+      "Eng": "Cactus Juice",
+      "Por": "Suco de Cacto"
     }
   }
 ]
