--- a/translations/texts/items/generic/food/tier2/candiedcorn.consumable.json
+++ b/translations/texts/items/generic/food/tier2/candiedcorn.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Candied Corn"
+      "Eng": "Candied Corn",
+      "Por": "Milho Doce"
     }
   }
 ]
