--- a/translations/texts/items/generic/food/tier2/candyapple.consumable.json
+++ b/translations/texts/items/generic/food/tier2/candyapple.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Candy Apple"
+      "Eng": "Candy Apple",
+      "Por": "Maçã do Amor"
     }
   }
 ]
