--- a/translations/texts/items/generic/food/tier2/carrotcake.consumable.json
+++ b/translations/texts/items/generic/food/tier2/carrotcake.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Carrot Cake"
+      "Eng": "Carrot Cake",
+      "Por": "Bolo de Cenoura"
     }
   }
 ]
