--- a/translations/texts/items/generic/food/tier2/carrotjuice.consumable.json
+++ b/translations/texts/items/generic/food/tier2/carrotjuice.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Carrot Juice"
+      "Eng": "Carrot Juice",
+      "Por": "Suco de Cenoura"
     }
   }
 ]
