--- a/translations/texts/items/generic/food/tier2/chocolatecake.consumable.json
+++ b/translations/texts/items/generic/food/tier2/chocolatecake.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Chocolate Cake"
+      "Eng": "Chocolate Cake",
+      "Por": "Bolo de Chocolate"
     }
   }
 ]
