--- a/translations/texts/items/generic/food/tier2/coffeecake.consumable.json
+++ b/translations/texts/items/generic/food/tier2/coffeecake.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Coffee Cake"
+      "Eng": "Coffee Cake",
+      "Por": "Bolo de Café"
     }
   }
 ]
