--- a/translations/texts/items/generic/food/tier2/cornpeckers.consumable.json
+++ b/translations/texts/items/generic/food/tier2/cornpeckers.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Corn Peckers"
+      "Eng": "Corn Peckers",
+      "Por": "Milho com Semente de Bico"
     }
   }
 ]
