--- a/translations/texts/items/generic/food/tier2/feathercrownjam.consumable.json
+++ b/translations/texts/items/generic/food/tier2/feathercrownjam.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Feathercrown Jam"
+      "Eng": "Feathercrown Jam",
+      "Por": "Geléia de Feathercrown"
     }
   }
 ]
