--- a/translations/texts/items/generic/food/tier2/fluffyruffs.consumable.json
+++ b/translations/texts/items/generic/food/tier2/fluffyruffs.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Fluffy Ruffs"
+      "Eng": "Fluffy Ruffs",
+      "Por": "Torrada Francesa"
     }
   }
 ]
