--- a/translations/texts/items/generic/food/tier2/mushroombread.consumable.json
+++ b/translations/texts/items/generic/food/tier2/mushroombread.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Mushroom Bread"
+      "Eng": "Mushroom Bread",
+      "Por": "Pão de Cogumelo"
     }
   }
 ]
