--- a/translations/texts/items/generic/food/tier2/mushroomquiche.consumable.json
+++ b/translations/texts/items/generic/food/tier2/mushroomquiche.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Mushroom Quiche"
+      "Eng": "Mushroom Quiche",
+      "Por": "Quiche de Cogumelo"
     }
   }
 ]
