--- a/translations/texts/items/generic/food/tier2/mushroomrice.consumable.json
+++ b/translations/texts/items/generic/food/tier2/mushroomrice.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Mushroom Rice"
+      "Eng": "Mushroom Rice",
+      "Por": "Arroz com Cogumelo"
     }
   }
 ]
