--- a/translations/texts/items/generic/food/tier2/pearlpeapancakes.consumable.json
+++ b/translations/texts/items/generic/food/tier2/pearlpeapancakes.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Pearlpea Pancakes"
+      "Eng": "Pearlpea Pancakes",
+      "Por": "Panquecas de Ervilha"
     }
   }
 ]
