--- a/translations/texts/items/generic/food/tier2/quichelorraine.consumable.json
+++ b/translations/texts/items/generic/food/tier2/quichelorraine.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Quiche Lorraine"
+      "Eng": "Quiche Lorraine",
+      "Por": "Quiche Lorraine"
     }
   }
 ]
