--- a/translations/texts/items/generic/food/tier2/roastdinner.consumable.json
+++ b/translations/texts/items/generic/food/tier2/roastdinner.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Roast Dinner"
+      "Eng": "Roast Dinner",
+      "Por": "Jantar Assado"
     }
   }
 ]
