--- a/translations/texts/items/generic/food/tier2/specialrice.consumable.json
+++ b/translations/texts/items/generic/food/tier2/specialrice.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Special Fried Rice"
+      "Eng": "Special Fried Rice",
+      "Por": "Arroz Frito Especial"
     }
   }
 ]
