--- a/translations/texts/items/generic/food/tier2/spikycookies.consumable.json
+++ b/translations/texts/items/generic/food/tier2/spikycookies.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Spiky Cookies"
+      "Eng": "Spiky Cookies",
+      "Por": "Biscoitos Espinhentos"
     }
   }
 ]
