--- a/translations/texts/items/generic/food/tier2/stuffedtomato.consumable.json
+++ b/translations/texts/items/generic/food/tier2/stuffedtomato.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Stuffed Tomato"
+      "Eng": "Stuffed Tomato",
+      "Por": "Tomate Recheado"
     }
   }
 ]
