--- a/translations/texts/items/generic/food/tier2/tomatojuice.consumable.json
+++ b/translations/texts/items/generic/food/tier2/tomatojuice.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Tomato Juice"
+      "Eng": "Tomato Juice",
+      "Por": "Suco de Tomate"
     }
   }
 ]
