--- a/translations/texts/items/generic/food/tier2/tomatosoup.consumable.json
+++ b/translations/texts/items/generic/food/tier2/tomatosoup.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Tomato Soup"
+      "Eng": "Tomato Soup",
+      "Por": "Sopa de Tomate"
     }
   }
 ]
