--- a/translations/texts/items/generic/food/tier3/2kbpotage.consumable.json
+++ b/translations/texts/items/generic/food/tier3/2kbpotage.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Wattage Potage"
+      "Eng": "Wattage Potage",
+      "Por": "Sopa Potente"
     }
   }
 ]
