--- a/translations/texts/items/generic/food/tier3/apegrapes.consumable.json
+++ b/translations/texts/items/generic/food/tier3/apegrapes.consumable.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Ape Grapes"
+      "Eng": "Ape Grapes",
+      "Por": "Uvas com Banana"
     }
   }
 ]
