--- a/translations/texts/items/armors/avian/avian-tier5accelerator/aviantier5accelerator.head.json
+++ b/translations/texts/items/armors/avian/avian-tier5accelerator/aviantier5accelerator.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Peacock Headdress"
+      "Eng": "Peacock Headdress",
+      "Por": "Cocar do Pavão"
     }
   }
 ]
