--- a/translations/texts/items/armors/avian/avian-tier5accelerator/aviantier5accelerator.legs.json
+++ b/translations/texts/items/armors/avian/avian-tier5accelerator/aviantier5accelerator.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Peacock Skirt"
+      "Eng": "Peacock Skirt",
+      "Por": "Saia de Pavão"
     }
   }
 ]
