--- a/translations/texts/items/armors/avian/avian-tier5manipulator/aviantier5manipulator.head.json
+++ b/translations/texts/items/armors/avian/avian-tier5manipulator/aviantier5manipulator.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Flamingo Headdress"
+      "Eng": "Flamingo Headdress",
+      "Por": "Cocar de Flamingo"
     }
   }
 ]
