--- a/translations/texts/items/armors/avian/avian-tier5manipulator/aviantier5manipulator.legs.json
+++ b/translations/texts/items/armors/avian/avian-tier5manipulator/aviantier5manipulator.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Flamingo Skirt"
+      "Eng": "Flamingo Skirt",
+      "Por": "Saia de Flamingo"
     }
   }
 ]
