--- a/translations/texts/items/armors/avian/avian-tier5separator/aviantier5separator.chest.json
+++ b/translations/texts/items/armors/avian/avian-tier5separator/aviantier5separator.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Phoenix Breastplate"
+      "Eng": "Phoenix Breastplate",
+      "Por": "Peitoral de Fênix"
     }
   }
 ]
