--- a/translations/texts/items/armors/avian/avian-tier5separator/aviantier5separator.head.json
+++ b/translations/texts/items/armors/avian/avian-tier5separator/aviantier5separator.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Phoenix Helm"
+      "Eng": "Phoenix Helm",
+      "Por": "Elmo de Fênix"
     }
   }
 ]
