--- a/translations/texts/items/armors/avian/avian-tier5separator/aviantier5separator.legs.json
+++ b/translations/texts/items/armors/avian/avian-tier5separator/aviantier5separator.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Phoenix Greaves"
+      "Eng": "Phoenix Greaves",
+      "Por": "Grevas de Fênix"
     }
   }
 ]
