--- a/translations/texts/items/armors/avian/avian-tier6accelerator/aviantier6accelerator.head.json
+++ b/translations/texts/items/armors/avian/avian-tier6accelerator/aviantier6accelerator.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Macaw Headdress"
+      "Eng": "Macaw Headdress",
+      "Por": "Cocar de Arara"
     }
   }
 ]
