--- a/translations/texts/items/armors/avian/avian-tier6manipulator/aviantier6manipulator.chest.json
+++ b/translations/texts/items/armors/avian/avian-tier6manipulator/aviantier6manipulator.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Raven's Breast"
+      "Eng": "Raven's Breast",
+      "Por": "Peitoral de Corvo"
     }
   }
 ]
