--- a/translations/texts/items/armors/avian/avian-tier6manipulator/aviantier6manipulator.head.json
+++ b/translations/texts/items/armors/avian/avian-tier6manipulator/aviantier6manipulator.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Raven's Beak"
+      "Eng": "Raven's Beak",
+      "Por": "Bico do Corvo"
     }
   }
 ]
