--- a/translations/texts/items/armors/avian/avian-tier6separator/aviantier6separator.chest.json
+++ b/translations/texts/items/armors/avian/avian-tier6separator/aviantier6separator.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Toucan Breastplate"
+      "Eng": "Toucan Breastplate",
+      "Por": "Peitoral de Tucano"
     }
   }
 ]
