--- a/translations/texts/items/armors/avian/avian-tier6separator/aviantier6separator.head.json
+++ b/translations/texts/items/armors/avian/avian-tier6separator/aviantier6separator.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Toucan Helm"
+      "Eng": "Toucan Helm",
+      "Por": "Elmo de Tucano"
     }
   }
 ]
