--- a/translations/texts/items/armors/avian/avian-tier6separator/aviantier6separator.legs.json
+++ b/translations/texts/items/armors/avian/avian-tier6separator/aviantier6separator.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Toucan Loincloth"
+      "Eng": "Toucan Loincloth",
+      "Por": "Tanga de Tucano"
     }
   }
 ]
