--- a/translations/texts/items/armors/avian/avian-worker/avianworker.chest.json
+++ b/translations/texts/items/armors/avian/avian-worker/avianworker.chest.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Worker Shirt"
+      "Eng": "Worker Shirt",
+      "Por": "Camisa de Operário"
     }
   }
 ]
