--- a/translations/texts/items/armors/avian/avian-worker/avianworker.legs.json
+++ b/translations/texts/items/armors/avian/avian-worker/avianworker.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Worker Skirt"
+      "Eng": "Worker Skirt",
+      "Por": "Saia de Operário"
     }
   }
 ]
