--- a/translations/texts/items/armors/backerhats/afrowig/afrowig.head.json
+++ b/translations/texts/items/armors/backerhats/afrowig/afrowig.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "The Captain's Fro"
+      "Eng": "The Captain's Fro",
+      "Por": "Afro do Capitão"
     }
   }
 ]
