--- a/translations/texts/items/armors/backerhats/coolshades/coolshades.head.json
+++ b/translations/texts/items/armors/backerhats/coolshades/coolshades.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Cool Shades"
+      "Eng": "Cool Shades",
+      "Por": "Óculos Legais"
     }
   }
 ]
