--- a/translations/texts/items/armors/backerhats/meercap/meercap.head.json
+++ b/translations/texts/items/armors/backerhats/meercap/meercap.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Nerdy Meercat"
+      "Eng": "Nerdy Meercat",
+      "Por": "Suricata Nerd"
     }
   }
 ]
