--- a/translations/texts/items/armors/backerhats/monitorhead/monitorhead.head.json
+++ b/translations/texts/items/armors/backerhats/monitorhead/monitorhead.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Monitor Helm"
+      "Eng": "Monitor Helm",
+      "Por": "Elmo de Monitor"
     }
   }
 ]
