--- a/translations/texts/items/armors/backerhats/phoenixhat/phoenixhat.head.json
+++ b/translations/texts/items/armors/backerhats/phoenixhat/phoenixhat.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Phoenix Circlet"
+      "Eng": "Phoenix Circlet",
+      "Por": "Diadema de Fênix"
     }
   }
 ]
