--- a/translations/texts/items/armors/backerhats/plumeknight/plumeknight.head.json
+++ b/translations/texts/items/armors/backerhats/plumeknight/plumeknight.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Plume Knight Helm"
+      "Eng": "Plume Knight Helm",
+      "Por": "Elmo de Cavaleiro com Pluma"
     }
   }
 ]
