--- a/translations/texts/items/armors/backerhats/rustyskul/rustyskul.head.json
+++ b/translations/texts/items/armors/backerhats/rustyskul/rustyskul.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Rusty Metal Skul"
+      "Eng": "Rusty Metal Skul",
+      "Por": "Crânio de Metal Enferrujado"
     }
   }
 ]
