--- a/translations/texts/items/armors/backerhats/stargazer/stargazer.head.json
+++ b/translations/texts/items/armors/backerhats/stargazer/stargazer.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Stargazer Hood"
+      "Eng": "Stargazer Hood",
+      "Por": "Capuz de Stargazer"
     }
   }
 ]
