--- a/translations/texts/items/armors/backerhats/thehrodgard/thehrodgard.head.json
+++ b/translations/texts/items/armors/backerhats/thehrodgard/thehrodgard.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "The Hrodgard"
+      "Eng": "The Hrodgard",
+      "Por": "O Hrodgard"
     }
   }
 ]
