--- a/translations/texts/items/armors/backerhats/tricornhat/tricornhat.head.json
+++ b/translations/texts/items/armors/backerhats/tricornhat/tricornhat.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Horned Tricorn"
+      "Eng": "Horned Tricorn",
+      "Por": "Tricórnio com Chifres"
     }
   }
 ]
