--- a/translations/texts/items/armors/backerhats/valkyriehelm/valkyriehelm.head.json
+++ b/translations/texts/items/armors/backerhats/valkyriehelm/valkyriehelm.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Valkyrie Helm"
+      "Eng": "Valkyrie Helm",
+      "Por": "Elmo de Valquíria"
     }
   }
 ]
