--- a/translations/texts/items/armors/backitems/aviangodwings/aviangodwings.back.json
+++ b/translations/texts/items/armors/backitems/aviangodwings/aviangodwings.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Avian God Wings"
+      "Eng": "Avian God Wings",
+      "Por": "Asas de Deus Avian"
     }
   }
 ]
