--- a/translations/texts/items/armors/backitems/batwings/batwings.back.json
+++ b/translations/texts/items/armors/backitems/batwings/batwings.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Terrifying Wings"
+      "Eng": "Terrifying Wings",
+      "Por": "Asas Aterrorizantes"
     }
   }
 ]
