--- a/translations/texts/items/armors/backitems/bladedwings/bladedwings.back.json
+++ b/translations/texts/items/armors/backitems/bladedwings/bladedwings.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Bladed Wings"
+      "Eng": "Bladed Wings",
+      "Por": "Asas Laminadas"
     }
   }
 ]
