--- a/translations/texts/items/armors/backitems/bonewings/bonewings.back.json
+++ b/translations/texts/items/armors/backitems/bonewings/bonewings.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Skeletal Wings"
+      "Eng": "Skeletal Wings",
+      "Por": "Asas Esqueléticas"
     }
   }
 ]
