--- a/translations/texts/items/armors/backitems/crystalpack/crystalpack.back.json
+++ b/translations/texts/items/armors/backitems/crystalpack/crystalpack.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Crystal Backpack"
+      "Eng": "Crystal Backpack",
+      "Por": "Mochila de Cristal"
     }
   }
 ]
