--- a/translations/texts/items/armors/backitems/dangerbarrel/dangerbarrel.back.json
+++ b/translations/texts/items/armors/backitems/dangerbarrel/dangerbarrel.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Unstable Barrel"
+      "Eng": "Unstable Barrel",
+      "Por": "Barril Instável"
     }
   }
 ]
