--- a/translations/texts/items/armors/backitems/demonwings/demonwings.back.json
+++ b/translations/texts/items/armors/backitems/demonwings/demonwings.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Demon Wings"
+      "Eng": "Demon Wings",
+      "Por": "Asas de Demônio"
     }
   }
 ]
