--- a/translations/texts/items/armors/backitems/falconwings/falconwings.back.json
+++ b/translations/texts/items/armors/backitems/falconwings/falconwings.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Stargazer Prophet Wings"
+      "Eng": "Stargazer Prophet Wings",
+      "Por": "Asas de Profeta Stargazer"
     }
   }
 ]
