--- a/translations/texts/items/armors/backitems/halogenpack/halogenpack.back.json
+++ b/translations/texts/items/armors/backitems/halogenpack/halogenpack.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Halogen Pack"
+      "Eng": "Halogen Pack",
+      "Por": "Mochila Halogênica"
     }
   }
 ]
