--- a/translations/texts/items/armors/backitems/oxygentank/oxygentank.back.json
+++ b/translations/texts/items/armors/backitems/oxygentank/oxygentank.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Oxygen Tank"
+      "Eng": "Oxygen Tank",
+      "Por": "Tanque de Oxigênio"
     }
   }
 ]
