--- a/translations/texts/items/armors/backitems/rainbowcape/rainbowcape.back.json
+++ b/translations/texts/items/armors/backitems/rainbowcape/rainbowcape.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Shawl of Elation"
+      "Eng": "Shawl of Elation",
+      "Por": "Capa Arco-íris"
     }
   }
 ]
