--- a/translations/texts/items/armors/backitems/simplecape/simplecape.back.json
+++ b/translations/texts/items/armors/backitems/simplecape/simplecape.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Simple Cape"
+      "Eng": "Simple Cape",
+      "Por": "Capa Simples"
     }
   }
 ]
