--- a/translations/texts/items/armors/backitems/tigertail/tigertail.back.json
+++ b/translations/texts/items/armors/backitems/tigertail/tigertail.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Tiger Tail"
+      "Eng": "Tiger Tail",
+      "Por": "Cauda de Tigre"
     }
   }
 ]
