--- a/translations/texts/items/armors/backitems/tribalfeathers/tribalfeathers.back.json
+++ b/translations/texts/items/armors/backitems/tribalfeathers/tribalfeathers.back.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Tribal Feathers"
+      "Eng": "Tribal Feathers",
+      "Por": "Penas Tribais"
     }
   }
 ]
