--- a/translations/texts/items/armors/biome/Bioluminescence/biolumin/biolumin.head.json
+++ b/translations/texts/items/armors/biome/Bioluminescence/biolumin/biolumin.head.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Glow Mask"
+      "Eng": "Glow Mask",
+      "Por": "Máscara Brilhante"
     }
   }
 ]
