--- a/translations/texts/items/armors/biome/Bioluminescence/biolumin/biolumin.legs.json
+++ b/translations/texts/items/armors/biome/Bioluminescence/biolumin/biolumin.legs.json
@@ -7,7 +7,8 @@
       ]
     },
     "Texts": {
-      "Eng": "Glow Trousers"
+      "Eng": "Glow Trousers",
+      "Por": "Calças Brilhantes"
     }
   }
 ]
